k8s-manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sdm-project-teamatch-network: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: luwenkai0820/sdm-project_backend:latest
          name: fastapi
          ports:
            - containerPort: 8000
          resources: {}
          tty: true
      restartPolicy: Always
status: {}
