k8s-manifest/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  volumes:
    - name: backend-volume
      persistentVolumeClaim:
        claimName: backend-claim0
  containers:
    - name: debug-container
      image: busybox
      command: ['sh', '-c', 'echo The debug Pod is running! && sleep 3600']
      volumeMounts:
        - mountPath: "/backend"
          name: backend-volume
