k8s-manifest/matching-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: matching
  name: matching
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: matching
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sdm-project-teamatch-network: "true"
        io.kompose.service: matching
    spec:
      containers:
        - image: luwenkai0820/sdm-project_matching
          name: matching
          ports:
            - containerPort: 8001
          resources: {}
          tty: true
      restartPolicy: Always
status: {}
