k8s-manifest/swipecard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: swipecard
  name: swipecard
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 8002
  selector:
    io.kompose.service: swipecard
status:
  loadBalancer: {}
