k8s-manifest/sdm-project-teamatch-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sdm-project-teamatch-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/sdm-project-teamatch-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sdm-project-teamatch-network: "true"
